# hackathon_bio_ai

./: .gitignore  .python-version  LICENSE  README.md  __init__.py  environment.yaml  pyproject.toml  wsi_names.yaml
Tasks/Convert_TIFF_to_ZARR/: Snakefile  config.yaml  convert_to_zarr.ipynb  convert_to_zarr.py
Tasks/Convert_to_SpatialData/: create_sdata_object.ipynb  dataloader.ipynb  open_sdata_zarr.ipynb
example_data/saved_from_hest/INT1.zarr/: zmetadata
example_data/saved_from_hest/INT1.zarr/images/ST_downscaled_hires_image/: .zattrs
example_data/saved_from_hest/INT1.zarr/images/ST_downscaled_hires_image/0/: .zarray
example_data/saved_from_hest/INT1.zarr/images/ST_downscaled_lowres_image/: .zattrs
example_data/saved_from_hest/INT1.zarr/shapes/cellvit/: .zattrs
example_data/saved_from_hest/INT1.zarr/shapes/locations/: shapes.parquet
example_data/saved_from_hest/INT1.zarr/shapes/tissue_contours/: shapes.parquet
example_data/saved_from_hest/INT1.zarr/tables/table/: .zattrs
notebooks/: Bio_hackathon_dataset_investigation.ipynb  denoise_xenium.ipynb  download_all.ipynb  plot_umap.ipynb  run_scPRINT_scDataloader.ipynb  visualize.ipynb
notebooks_adrien/: Bio_hackathon_dataset_investigation.ipynb  embedding_pipeline.ipynb  generate_uni_embeddings_per_patch.py  stsimilarity.py
notebooks_elise/: image_similarity_nb.ipynb  open_visium_sdata.ipynb
notebooks_etienne/: dataformats.ipynb  embeddings.ipynb  open_h5ad.ipynb
src/: open_embedded_st.py  utils.py  viz_slice.py
src/st_challenge/scripts/: open_embedded_st.py
(+103 files in other folders)
