[project]
name = "st_challenge"
version = "0.1.0"
description = "a dataloader for single cell data in lamindb"
authors = [
    {name = "jkobject", email = "jkobject@gmail.com"}
    # TODO: add other members
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["spatial RNAseq", "dataloader", "pytorch"]
dependencies = [
    "spatialdata[extra]>=0.1.6",
    "datasets>=2.14.0",
    "scprint>=1.6.4",
    "huggingface-hub>=0.23.0",
    "scanpy>=1.10.0",
    "HEST @ git+https://github.com/mahmoodlab/HEST.git",
    "squidpy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.4",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocs-git-authors-plugin>=0.4.0",
    "mkdocs-jupyter>=0.2.0",
    "mkdocstrings-python>=0.10.0"
]

[tool.ruff]
# Set the maximum line length to 88.
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401", "F403", "E722", "E741", "E731", "E721"]

[project.urls]
repository = "https://github.com/jkobject/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
  "/src",
]

[tool.hatch.build.targets.wheel]
only-include = [
  "/src",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
scdataloader = { workspace = true }
